--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "react-loadable": "^5.5.0",
     "react-redux": "^7.0.3",
     "react-redux-firebase": "^2.2.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-socks": "^1.0.1",
+    "react-transition-group": "^4.0.1",
     "redux": "^4.0.1",
     "redux-firestore": "^0.8.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.87.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "static-site-generator-webpack-plugin": "^3.4.2"
   }
 }
