--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-transition-group": "1.x",
     "redux": "^4.0.1",
     "redux-firestore": "^0.8.0",
-    "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.87.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
