--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "react-loadable": "^5.5.0",
     "react-redux": "5.1.1",
     "react-redux-firebase": "^2.2.6",
+    "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-socks": "^1.0.1",
-    "react-transition-group": "1.x",
+    "react-transition-group": "^4.0.1",
     "redux": "^4.0.1",
     "redux-firestore": "^0.8.0",
     "redux-thunk": "^2.3.0"
